# dgen

./: .gitignore  app.py  home.yml  pyproject.toml  readme.md  requirements.txt
templates/: admin.txt  models.txt  serializers.txt  tests.txt  urls.txt  views.txt
templates/users/: admin.py  models.py
tests/: conftest.py  test_field_handlers.py
utils/: code_quality.py  field_handlers.py
