[tool.poetry]
name = "dgen"
version = "0.1.0"
description = "utils to bootstrap django apis"
authors = ["Pedro Rivera <ppsirg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2.1"
jinja2 = "^3.1.2"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
